--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,3 +68,11 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: AppBundle\Entity\User
+    from_email:
+        address: "hello@boss.tn"
+        sender_name: "zarakbecha"
