--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,22 @@ swiftmailer:
     password: '%mailer_password%'
     spool: { type: memory }
 
+vich_uploader:
+    db_driver: orm
+    mappings:
+           product_image:
+                       uri_prefix:         /images/products
+
+                       upload_destination: '%kernel.root_dir%/../web/images/products'
+
+                       namer:  vich_uploader.namer_hash
+                       inject_on_load:     false
+                       delete_on_update:   true
+                       delete_on_remove:   true
+
+
+
+
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
