--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -92,3 +92,6 @@ fos_user:
     from_email:
         address: "hello@boss.tn"
         sender_name: "zarakbecha"
+    registration:
+             form:
+                 type: servicomBundle\Form\FRepresentType
